RESOLVED FIXED224431
Descendant style relations are sometimes reset when they shouldn't
https://bugs.webkit.org/show_bug.cgi?id=224431
Summary Descendant style relations are sometimes reset when they shouldn't
Antti Koivisto
Reported 2021-04-12 05:58:31 PDT
Some style relations computed during resolution of descendants are set on a parent element. The parent element shouldn't reset them unless we are actually also computing the descendants.
Attachments
patch (19.07 KB, patch)
2021-04-12 06:52 PDT, Antti Koivisto
no flags
Antti Koivisto
Comment 1 2021-04-12 05:58:39 PDT
Antti Koivisto
Comment 2 2021-04-12 06:52:01 PDT
EWS
Comment 3 2021-04-12 09:50:00 PDT
Committed r275825 (236395@main): <https://commits.webkit.org/236395@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 425740 [details].
Note You need to log in before you can comment on or make changes to this bug.